--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <%@coupon.each do |coupon|%>
+<p>Coupon Name</p>
 <p><%= link_to coupon.coupon_code, coupon_path(coupon.id)%>
 <%end%>
 </html>
