--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <%= form_tag coupons_path do %>
-  <label>Coupon Title:</label><br>
+  <label>Coupon Form:</label><br>
   <%= text_field_tag :'coupon[coupon_code]' %><br>
  
-  <label>Post description:</label><br>
+  <label>store</label><br>
   <%= text_area_tag :'coupon[store]' %><br>
  
-  <%= submit_tag "Submit Post" %>
+  <%= submit_tag "Submit Coupon" %>
 <% end %>
 </html>
